--- a/views/account/widgets.jade
+++ b/views/account/widgets.jade
@@ -25,6 +25,7 @@ block extra_head
       $(document).on('hide.bs.collapse show.bs.collapse', '.sipCollapse', function() {
         var trigger = $('[data-toggle="collapse"][href="#' + $(this).attr('id') + '"]');
         trigger.find('i').toggleClass('glyphicon-chevron-down glyphicon-chevron-right');
+        $('#'+$(this).attr('id')).toggle();
       });
 
       $(document).on('click', '#callVoxbone', function() {
@@ -33,57 +34,50 @@ block extra_head
     });
 
 block content
-  .main.buttonList(ng-controller="WidgetListController")
-    .header
-      .container
-        h1 Click2Vox Buttons
-        if !currentUser.upgrade_request && currentUser.sip_uris.length == 0
-          p#upgrade_request Your trial account is authorized to create a single user-defined SIP URI and 5 simultaneous calls. #[a(href="#" ng-click='openRequestUpgradeModal(false)') Request a free upgrade]
-        else
-          p#upgrade_request You currently have #{currentUser.sip_uris.length} SIP URI’s for up to 5 simultaneous calls per account. #[a(href="#" ng-click='openRequestUpgradeModal(false)') Request an upgrade] if you need more
-
-        .actions-wrap
-          if process.env.BYPASS_ADDING_SIP_URI === 'false'
-            #[a.btn.btn-purple(href="/sip/new") Add SIP URI]
-          #[=" "] #[a.btn.btn-success(href="/widget/new") Add New Button]
-
-    .body
-      .container
-
-        while m = messages.shift()
+  .site-wrapper-inner.home-wrap(ng-controller="WidgetListController")
+    .container
+      while m = messages.shift()
           .alert(class='alert-' + m.type)
-            div= m.message 
-              #[a(href="#" ng-click='openRequestUpgradeModal(false)')  Request More]
+            div= m.message
+              a(href="#" ng-click='openRequestUpgradeModal(false)')  Request More
+      .row
+        .col-xs-12
+          .touch
+            center.header
+              span.large Click2Vox Buttons
+              br
+              span You will only be able to create buttons with a single user-defined SIP URI on a free account.
+                a(href="#")  Upgrade Now
 
-        .row
-          - each group in widgetsData
-            .col-xs-12
-              .group-header
-                h4
-                  a(data-toggle="collapse" href="##{group.uuid}" class="#{(group.widgets.length === 0) ? 'collapsed': ''}")
-                    i(class="glyphicon glyphicon-chevron-#{(group.widgets.length === 0) ? 'right': 'down'}")
+            center
+              a.btn.btn-default-custom.add-btn(href="/sip/new") Add SIP URI
+              a.btn.btn-default-custom.add-btn(href="/widget/new") Add New Button
+            hr
+
+            each group in widgetsData
+              .toggle-extra
+                a(data-toggle="collapse" id="flip" href="##{group.uuid}" class="#{(group.widgets.length === 0) ? 'collapsed': ''}")
                     span #{group._id}
-                .group-header-actions
-                  a(href="#" ng-click='editSIPURI("#{group._id}")') Edit
+                a.pull-right(href="#" ng-click='editSIPURI("#{group._id}")') Edit
 
-              .sipCollapse.collapse.in(id="#{group.uuid}")
                 if group.widgets.length > 0
-                  table.table
-                    thead
-                      tr
-                        td(width="25%") Configuration Name
-                        td.text-center(width="45%") Button Preview
-                        td.text-right Actions
-                    tbody
-                      - each widget in group.widgets
-                        tr
-                          td #{widget.configuration_name}
-                          td.text-center
-                            button(style="border: #{widget.button_color}; background: #{widget.button_color}" class="btn-#{widget.button_style}")
-                              span #{widget.button_label || defaultBtnLabel}
-                          td.text-right
-                            #[button.btn.btn-sm.btn-primary.clipboard(widget-code="#{widget.divCode}") Copy Code] #[a.btn.btn-sm.btn-info(href="/widget/#{widget._id}/edit") View / Edit] #[button.deleteButton.btn.btn-sm.btn-danger(ng-click='openDeleteModal("#{widget._id}")') Delete]
+                  .toggle-content.sipCollapse.collapse.in(id="#{group.uuid}" style="display: block")
+                    .row.tc-header
+                      .col-xs-4 Configuration Name
+                      .col-xs-4.text-center Button Preview
+                      .col-xs-4.text-right Button Preview
+                      .col-xs-12
+                        .divider
+                    each widget in group.widgets
+                      .row
+                        .col-xs-4 #{widget.configuration_name}
+                        .col-xs-4.text-center
+                          button.btn(style="border: #{widget.button_color}; background: #{widget.button_color}" class="btn-#{widget.button_style}")
+                            span #{widget.button_label || defaultBtnLabel}
+                        .col-xs-4.text-right
+                          a(widget-code="#{widget.divCode}") Copy Code
+                          a(href="/widget/#{widget._id}/edit") View/Edit
+                hr
 
-    include contact-voxbone
-    include ../sip/edit_modal
-    include ../widget/delete_modal
+    //- include contact-voxbone
+    //- include ../sip/edit_modal
