--- a/views/login.jade
+++ b/views/login.jade
@@ -22,8 +22,8 @@ block content
           #alert-user-pass.alert.alert-danger.hidden Incorrect Email or Password, try again.
           #alert-unverified.alert.alert-danger.hidden Unverified account. Please check your inbox to validate your email address.
 
-          .register-content
-            .reg-header
+          .panel-content
+            .panel-header
               h4 Login
               strong
                 | Note for current Voxbone customers:
