Added edit_modal view, fixed error on _modal.less now using _custom-modal.less, fixed error on form-control class

--- a/public/stylesheets/root.less
+++ b/public/stylesheets/root.less
@@ -13,6 +13,7 @@ Font Awesome
 Plugin Css
 ================================================ */
 /* Bootstrap */
+@import "//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css";
 @import "less_ui/plugins/bootstrap-flex.css";
 
 /* ================================================
@@ -29,7 +30,7 @@ Main Css
 @import "less_ui/modules/_footer";
 @import "less_ui/modules/_buttons";
 @import "less_ui/modules/_tool-tip";
-@import "less_ui/modules/_modal";
+@import "less_ui/modules/_custom-modal";
 @import "less_ui/modules/_panel";
 
 /* App Sections */
@@ -41,3 +42,15 @@ Main Css
 
 /* Responsive Style */
 @import "less_ui/modules/_responsive";
+
+
+/* Main Css Codes */
+@import "less/mixing";
+@import "less/colors";
+@import "less/custom";
+
+
+@import "less/createButton";
+@import "less/buttonList";
+/* Widget Style */
+@import "less/widget";
