--- a/views/account/widgets.jade
+++ b/views/account/widgets.jade
@@ -80,4 +80,4 @@ block content
                 hr
 
     //- include contact-voxbone
-    //- include ../sip/edit_modal
+    include ../sip/edit_modal
