--- a/views/sip/edit_modal.jade
+++ b/views/sip/edit_modal.jade
@@ -1,24 +1,22 @@
 .modal.editSIPModal#editSIPModal(tabindex="-1" role="dialog" aria-labelledby="editSIPModalLabel" ng-controller="EditSIPController")
-  .modal-dialog(role="document")
-    .modal-content
-      .modal-header
-        button.close(type="button" data-dismiss="modal" aria-label="Close")
-          span(aria-hidden="true")&times;
-        h4.modal-title#editSIPModalLabel
-          i.glyphicon.glyphicon-edit
-          span  Edit SIP URI
-      .modal-body
-        .formWrap
+  .modal-dialog.custom-modal-dialog(role="document")
+  .modal-backdrop.fade.in
+  .modal.custom-modal.fade.in(tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: flex")
+    .modal-dialog.custom-modal-dialog(role="document")
+      .modal-content.custom-modal-content.edit-sip
+        .modal-header.custom-modal-header
+          button.close(type="button" data-dismiss="modal" aria-label="Close")
+            span(aria-hidden="true") ×
+          h4.modal-title.custom-modal-title(id="myModalLabel") Edit SIP URI
+        .modal-body.custom-modal-body
           form(name="sipEditForm")
             .form-group
-              label.control-label SIP URI:
-              input.form-control(name="sip_uri" ng-model="sip_uri" ng-pattern="/^[^@]+@[^@]+$/" required)
-
+              label(for="exampleInputName2") SIP URI
+              input.form-control(type="text" placeholder="timeivr@sipvox1.voxbone.com" name="sip_uri" ng-model="sip_uri" ng-pattern="/^[^@]+@[^@]+$/" required)
           .alert.alert-success(ng-bind="successMessage" ng-show="successMessage")
           .error-label
             div(ng-bind="errorMessage" ng-show="errorMessage")
             div(ng-show="sipEditForm.sip_uri.$error.pattern") SIP URI must be valid i.e: user@ivrs.voxbone.com
-
-      .modal-footer
-        button.btn.btn-purple(ng-bind="submitText" ng-disabled="!sipChanged || saving || sipEditForm.$invalid" ng-click="saveSipURI()")
-        button.btn(data-dismiss="modal") Cancel
+        .modal-footer.custom-modal-footer
+          button.btn.btn-default-custom(ng-bind="submitText" ng-disabled="!sipChanged || saving || sipEditForm.$invalid" ng-click="saveSipURI()") Save SIP URI
+          button.btn.btn-default-custom(data-dismiss="modal") Cancel
