--- a/public/stylesheets/root.less
+++ b/public/stylesheets/root.less
@@ -13,7 +13,7 @@ Font Awesome
 Plugin Css
 ================================================ */
 /* Bootstrap */
-@import "//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css";
+@import "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css";
 @import "less_ui/plugins/bootstrap-flex.css";
 
 /* ================================================
