adding view: new sip address

--- a/public/stylesheets/root.less
+++ b/public/stylesheets/root.less
@@ -49,7 +49,7 @@ Main Css
 @import "less/colors";
 @import "less/custom";
 
-
+@import "less/addSip";
 @import "less/createButton";
 @import "less/buttonList";
 /* Widget Style */
