--- a/views/sip/new.jade
+++ b/views/sip/new.jade
@@ -24,42 +24,44 @@ block extra_head
     });
 
 block content
-  .main.createButton.addSip(class=currentUser.showWizard() ? 'wizard' : '')
     .header
-      .container
-        h1 Add a new SIP address
-        p Enter the SIP URI you would like to use for your button. Your free account allows you to use one SIP URI at a time but you can request for an upgrade.
-        p Don't have a SIP URI? You can skip this for now
-
-        .row
-          if currentUser.showWizard()
-            .col-xs-6.col-xs-offset-3
-              .sip-steps
-                .step.active
-                  span Add your SIP URI
-                .step.right
-                  span Add WebRTC Call Button
-
+        .main.createButton.addSip(class=currentUser.showWizard() ? 'wizard' : '')
     .body(ng-controller='AddSIPController' ng-init="init()")
-      .container
-        .row
-          .col-xs-6
-            section
-              span.title Add a new SIP Address
-              form(name="sip_form" novalidate)
-                .boxPanel
-                  .form-group
-                    label SIP URI
-                      span.badge(data-toggle='tooltip' data-placement="right" title="This is the SIP address where inbound traffic from your Click2Vox button will be directed. Enter any valid SIP URI.") ?
-                    input.form-control(type="text", name="sip_uri", ng-model="sip.uri" ng-pattern="/^[^@]+@[^@]+$/" check-allowed-sip auto-focus required)
-                    div(style='color: green')
-                      div.ng-cloak(ng-show="onSubmitting") {{successMessage}}
+      .site-wrapper-inner.home-wrap
+        .panel-content
+          .container
+            .row
+              .col-xs-6
+                h1.text-left Add a new SIP address
+                p Enter the SIP URI you would like to use for your button. Your free account allows you to use one SIP URI at a time but you can request for an upgrade.
+                p Don't have a SIP URI? You can skip this for now.
 
-                    .error-label
-                      div.ng-cloak(ng-show="sip_form.sip_uri.$error.notallowed") SIP URI not allowed
-                      div.ng-cloak(ng-show="errorMessage") {{errorMessage}}
+            .row
+              if currentUser.showWizard()
+                  .sip-steps
+                    .step.active
+                      span Add your SIP URI
+                    .step.right
+                      span Add WebRTC Call Button
+          .container
+            .row
+              .col-xs-6
+                section
+                  span.title Add a new SIP Address
+                  form(name="sip_form" novalidate)
+                    .boxPanel
+                      .form-group
+                        label SIP URI
+                          span.badge(data-toggle='tooltip' data-placement="right" title="This is the SIP address where inbound traffic from your Click2Vox button will be directed. Enter any valid SIP URI.") ?
+                        input.form-control(type="text", name="sip_uri", ng-model="sip.uri" ng-pattern="/^[^@]+@[^@]+$/" check-allowed-sip auto-focus required)
+                        div(style='color: green')
+                          div.ng-cloak(ng-show="onSubmitting") {{successMessage}}
 
-                  .form-group(ng-cloak)
-                    button.btn.btn-purple.save-sip(ng-disabled="sip_form.$invalid || onSubmitting" ng-click="saveSipURI(sip_form)" data-loading-text="Loading..." name="submitBtn") {{submitText}}
-                    button.btn.btn-success.pull-right.skip-sip(ng-click="skipURI('#{process.env.APP_URL}/widget/new')"
-                    name="submitBtn") {{skipText}}
+                        .error-label
+                          div.ng-cloak(ng-show="sip_form.sip_uri.$error.notallowed") SIP URI not allowed
+                          div.ng-cloak(ng-show="errorMessage") {{errorMessage}}
+
+                      .form-group(ng-cloak)
+                        button.btn.btn-purple.save-sip(ng-disabled="sip_form.$invalid || onSubmitting" ng-click="saveSipURI(sip_form)" data-loading-text="Loading..." name="submitBtn") {{submitText}}
+                        button.btn.btn-success.pull-right.skip-sip(ng-click="skipURI('#{process.env.APP_URL}/widget/new')"
+                        name="submitBtn") {{skipText}}
