Adding signup section, social-buttons section and forgot password section. Fixing space between social buttons, fixing passwordStrength height

--- a/public/stylesheets/less/custom.less
+++ b/public/stylesheets/less/custom.less
@@ -78,6 +78,7 @@ pre {
   -webkit-border-radius: 0 !important;
      -moz-border-radius: 0 !important;
           border-radius: 0 !important;
+  height: auto;
 }
 
 .createButton.addSip{
@@ -149,4 +150,10 @@ pre {
 
 .form-control{
   height:40px !important;
+}
+
+.social-buttons{
+  a{
+    margin-right: 5px;
+  }
 }
