--- a/views/signup.jade
+++ b/views/signup.jade
@@ -30,21 +30,25 @@ block content
 
   .main.registerPage
     .body
-      .container
-        .row
-          .col-sm-12
-            h1 Create Account
+      .site-wrapper-inner.home-wrap
+        .container
+          .row
+            .col-sm-6
+              .panel-content
+                .panel-header
+                  h4 Create Account
 
-            #alert-error.alert.alert-danger.hidden
-            #alert-info.alert.alert-info.hidden
+                  #alert-error.alert.alert-danger.hidden
+                  #alert-info.alert.alert-info.hidden
 
-            #form_container
-              p.
-                #[b Note for current Voxbone customers:] your Click2Vox login will not be linked to your existing Voxbone account. To use your Voxbone account and an existing DID, please visit #[a(href="https://developers.voxbone.com/how-to/setup-webrtc/") view instructions]
+                  #form_container
 
-              .formWrap
-                h4.text-center Login with Google, Github, Windows Live or LinkedIn
-                include social-buttons
+                    strong
+                      | Note for current Voxbone customers:&nbsp;
+                    span your Click2Vox login will not be linked to your existing Voxbone account. We encourage you to create a separate account here for testing purposes. To use your Voxbone account and an existing DID, please visit #[a(href="https://developers.voxbone.com/how-to/setup-webrtc/") view instructions]
+                .oauth-wrap
+                  h4.text-center Login with Google, Github, Windows Live or LinkedIn
+                  include social-buttons
 
                 h4.text-center or enter your details below to create a new account
                 form#create_account(ng-controller="SignUpController" name="create_account" ng-init="account.uemail='#{email || ''}'" novalidate)
@@ -74,7 +78,7 @@ block content
                     label.control-label Password
                     input.form-control(type="password" id="upassword" name="upassword" ng-model="account.upassword" required password-strength="account.upassword")
                     .progress.passwordStrength.ng-hide(ng-show="create_account.upassword.$dirty")
-                      .progress-bar(role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: {{strength_percent}}%" class="{{strength_class}}")
+                      .progress-bar(role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: {{strength_percent}}%;" class="{{strength_class}}")
                         span Strength: {{strength}}!
                     .error-label(ng-show="create_account.$submitted || create_account.upassword.$touched")
                       .ng-hide(ng-show="create_account.upassword.$error.required") Password is required
