--- a/public/stylesheets/less_ui/main/_colors.less
+++ b/public/stylesheets/less_ui/main/_colors.less
@@ -16,3 +16,13 @@
 
 @color-info:        #249be7;
 @color-purple:      #791e75;
+
+@main-bg:         #eef2f5;
+@main-bg-light:   #E6EFF5;
+@contenttext:     #343c3e;
+@subText:         #58646e;
+@vx-purple:       #781e75;
+@light-purple:    #FFEAFE;
+@navbar-grey:     #92a5a5;
+@border-grey:     #d7dfe1;
+@panel-bg:        #fbfcfc;
