--- a/views/home.jade
+++ b/views/home.jade
@@ -90,5 +90,6 @@ block content
               button.btn.btn-default(type="submit") Sign up for Newsletter
 
       .footer
-        p © 2016 Voxbone SA/NV | #[a(href="" target="_blank")] Acceptable Use Policy | #[a(href="" target="_blank")] Privacy Policy | #[a(href="" target="_blank")] Cookie Policy
+        p #[a(target="blank" href=" https://www.voxbone.com/acceptable-use-policy") Acceptable Use Policy] | #[a(target="blank" href="https://www.voxbone.com/privacypolicy.jsf") Privacy Policy] | #[a(href="/known-issues") Known Issues] | #[a(href="/faq") FAQ] | #[a(target="blank" href="mailto:workshop@voxbone.com?subject=Voxbone Widget Generator Feedback") Send Feedback] | #[a(target="blank" href="https://workshop.voxbone.com") A Workshop Project] | #[a(target="blank" href="https://www.voxbone.com/" style="border-right: 0px;") Copyright ©2016, VOXBONE SA]
+
 
