--- a/views/known_issues.jade
+++ b/views/known_issues.jade
@@ -1,14 +1,8 @@
 extends layout
 
 block content
-  .main.buttonList
-    .header
-      .container
-        .row
-          .col-xs-12
-            h1 Known Issues
-
-    .body
+  .body
+    .site-wrapper-inner.home-wrap
       .container
         .row
           .col-sm-12
