--- a/views/login.jade
+++ b/views/login.jade
@@ -48,10 +48,10 @@ block content
                 input.form-control(type="password", id="upassword", name="upassword", ng-model="login.upassword", required)
                 .ng-cloak(ng-show="login_form.$submitted || login_form.upassword.$touched")
                   .error-label(ng-show="login_form.upassword.$error.required") Password is required
-
-              a.btn.btn-default-custom#login(ng-disabled="login_form.$invalid" ng-click="login.processForm()") Login
-              span
-                a(href="/forgot") Forgot your password?
-                br
-                a(href="/signup") Sign up here
+              .form-group
+                a.btn.btn-block.btn-default-custom#login(ng-disabled="login_form.$invalid" ng-click="login.processForm()") Login
+                span
+              a(href="/forgot") Forgot your password?
+              br
+              a(href="/signup") Sign up here
 
