--- a/public/stylesheets/less/widget.less
+++ b/public/stylesheets/less/widget.less
@@ -83,8 +83,13 @@
 .button-text{
   display:inline-block;
   text-align:center;
+  margin-right: 3px;
+  margin-left: 3px;
 }
 
+.buttons {
+  text-align: center;
+}
 
 .widget-box{
   position: relative;
