--- a/public/stylesheets/less_ui/modules/_panel.less
+++ b/public/stylesheets/less_ui/modules/_panel.less
@@ -6,38 +6,45 @@
   padding: 20px 25px;
 
   hr {
-    border-color: @color-white;  
+    border-color: @color-white;
   }
-  
+
   .panel-header {
     text-align: center;
-    
+
     h4 {
       font-size: 2.333em;
       font-weight: 300;
     }
-    
+
     strong {
       font-weight: 700;
-    }    
-    
+    }
+
     span,
     strong {
       display: inline;
       font-size: 0.933em;
     }
-  }  
+  }
 
   a {
     color: #fff;
-    
+
     &:hover {
       color: @color-light-blue;
     }
   }
-  
+
   .panel-body {
     padding-top: 50px;
   }
-    
+
+}
+
+.panel-collapse {
+  color: @font-color;
+  span {
+    margin-left:5px;
+  }
 }
