Finished edit button

--- a/public/stylesheets/less/createButton.less
+++ b/public/stylesheets/less/createButton.less
@@ -8,6 +8,10 @@
   position: absolute;
 }
 
+.preview-title {
+  font-weight: 700;
+}
+
 .createButton{
   .panel-heading a:after {
     font-family:'Glyphicons Halflings';
