--- a/public/stylesheets/less/widget.less
+++ b/public/stylesheets/less/widget.less
@@ -60,7 +60,7 @@
 }
 .btn-style-c{
   .btn-widget(rgba(25,41,209,1));
-  border: 1px solid grey;
+  border: 1px solid rgba(64,62,57,0.7);
   background: rgba(25,41,209,1);
   background: -moz-linear-gradient(-45deg, rgba(25,41,209,1) 0%, rgba(28,89,3,1) 50%, rgba(231,56,39,1) 100%);
   background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(25,41,209,1)), color-stop(50%, rgba(28,89,3,1)), color-stop(100%, rgba(231,56,39,1)));
