--- a/public/stylesheets/less/createButton.less
+++ b/public/stylesheets/less/createButton.less
@@ -133,8 +133,11 @@
     background: #FBFCFC;
   }
   .preview{
-
     .prev-view{
+      a{
+        color: @font-color;
+        text-decoration: none;
+      }
       position: relative;
       padding: 45px 60px 45px;
       .border-radius(5px, 0, 0, 0);
