--- a/views/sip/edit_modal.jade
+++ b/views/sip/edit_modal.jade
@@ -1,7 +1,5 @@
 .modal.editSIPModal#editSIPModal(tabindex="-1" role="dialog" aria-labelledby="editSIPModalLabel" ng-controller="EditSIPController")
-  .modal-dialog.custom-modal-dialog(role="document")
-  .modal-backdrop.fade.in
-  .modal.custom-modal.fade.in(tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: flex")
+  .modal.custom-modal.fade.in
     .modal-dialog.custom-modal-dialog(role="document")
       .modal-content.custom-modal-content.edit-sip
         .modal-header.custom-modal-header
